--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,10 @@
 			<version>2.1.214</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
 
     </dependencies>
 
